--- a/page.html
+++ b/page.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cristina Marcè Acosta</title>
-    <link rel="stylesheet" href="Página Github.css">
+    <link rel="stylesheet" href="page.css">
 </head>
 <body>
     <div class="grid-container">
