--- a/page.html
+++ b/page.html
@@ -77,7 +77,7 @@
     </form>
 
     <footer>
-        <img src="img/emiratesA380.png" alt="">
+        <img src="img/iberia.png" alt="">
     </footer>
 </body>
 </html>
