--- a/page.html
+++ b/page.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cristina Marcè Acosta</title>
-    <link rel="stylesheet" href="newpage.css">
+    <link rel="stylesheet" href="page.css">
 </head>
 <body>
     <div class="grid-container">
         <section class="header">LUGARES DEL MUNDO
-            <a href="https://instagram.com"><img class = "instagram" src="img/instagram.png" alt="" width="3%"></a>
-            <a href="https://twitter.com"><img class = "Twitter" src="img/Twitter.png" alt="" width="5%"></a>
+            <a href="https://instagram.com"><img class = "instagram" src="img/instagram.png" alt="" width="3%" alt = "Icono Instagram"></a>
+            <a href="https://twitter.com"><img class = "Twitter" src="img/Twitter.png" alt="" width="5%" alt = "Icono Twitter"></a>
         </section>
         <section class="menu">
             <a href="https://tinyurl.com/yxreyden" alt= "Enlace a ofertas">Ofertas</a>
@@ -83,7 +83,7 @@
     </form>
     </div>
     <footer>
-        <img src="img/emiratesA380.png" alt="">
+        <img src="img/emiratesA380.png" alt="animacion de avion">
     </footer>
     
 </body>
