--- a/page.html
+++ b/page.html
@@ -10,21 +10,21 @@
 <body>
     <div class="grid-container">
         <section class="header">LUGARES DEL MUNDO
-            <a href="https://instagram.com"><img class = "instagram" src="img/instagram.png" alt="" width="3%" alt = "Icono Instagram"></a>
-            <a href="https://twitter.com"><img class = "Twitter" src="img/Twitter.png" alt="" width="5%" alt = "Icono Twitter"></a>
+            <a href="https://instagram.com"><img class = "instagram" src="img/instagram.png" width="3%" alt = "Icono Instagram"></a>
+            <a href="https://twitter.com"><img class = "Twitter" src="img/Twitter.png" width="5%" alt = "Icono Twitter"></a>
         </section>
         <section class="menu">
             <a href="https://tinyurl.com/yxreyden" alt= "Enlace a ofertas">Ofertas</a>
             <a href="https://www.way-away.es/" alt= "Enlace a rutas de viajes">Rutas</a>
             <a href="https://tinyurl.com/4ojyjulw" alt="Enlace a curiosidades">Curiosidades</a>
-            <a href="">Otros</a>
+            <a href="" alt = "Enlace al apartado otros">Otros</a>
         </section>
         <section class="text">
             <p>
-                Vivimos en un planeta realmente increíble lleno de bellezas naturales que nos dejan atónicos y nos hacen preguntarnos “¿de dónde ha salido esto?”. Géiseres rociando agua, auroras boreales, coloridas formaciones rocosas, enormes cascadas, inmensas bahías cubiertas de hierba, puestas de sol e impresionantes amaneceres… En resumen, es imposible no se sentirse seducido por las bellezas de la Madre Naturaleza.
-                Rincones realmente espectaculares que son inolvidables para cualquiera que tenga la oportunidad de verlos.
+                Vivimos en un planeta realmente increíble lleno de bellezas naturales que nos dejan atónicos. Géiseres rociando agua, auroras boreales, coloridas formaciones rocosas, enormes cascadas, inmensas bahías cubiertas de hierba, puestas de sol e impresionantes amaneceres… En resumen, es imposible no se sentirse seducido por las bellezas de la Madre Naturaleza. Rincones realmente espectaculares que son inolvidables para cualquiera que tenga la oportunidad de verlos.
             </p>
         </section>
+        <article>
         <section class="Fuji">
             <h1>Monte Fuji</h1>
             <a href="https://tinyurl.com/29odaou8"><img class= "grid-img" src="img/montefuji.jpg" alt="Foto Monte Fuji en Japón" width="50%"></a>
@@ -61,11 +61,12 @@
             <h1>Taj Mahal</h1>
             <a href="https://tinyurl.com/1nn5hgk9"><img class= "grid-img" src="img/tajmahal.jpg" alt="Foto del Palacio de Taj Mahal en India" width="50%"></a>
         </section>
-    
+    </article>
     <form action="">
         <fieldset>
             <legend>Datos</legend>
-            <p>Si está interesado en descubrir estos sitios con nosotros. Introduzca sus datos personales y nos pondremos en contacto. </p>
+            <p>Si está interesado en descubrir estos sitios con nosotros. Introduzca sus datos personales y nos pondremos en contacto.</p>
+
             <label for="nombre">Nombre</label>
             <input type="text" id="nombre" required alt = "caja para introducir el nombre">
     
